<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnOmitir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="Omitir" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/ac0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/p0"
                android:textAppearance="@style/subtitulos"
                android:textColor="#70BECD" />

            <TextView
                android:id="@+id/ac1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/in1"
                android:textAppearance="@style/normaltext"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/ac2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/dp1"
                android:textAppearance="@style/normaltext"
                android:textColor="#000000"
                android:textStyle="bold"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/ac3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp"
                android:text="@string/tx1"
                android:textAppearance="@style/normaltext"
                android:textColor="#000000" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/intro1" />
            
             <TextView
                 android:id="@+id/ac4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:text="@string/dp2"
                 android:textAppearance="@style/normaltext"
                 android:textColor="#000000"
                 android:textStyle="bold"
                 android:visibility="invisible" />

            <TextView
                android:id="@+id/ac5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp"
                android:text="@string/tx2"
                android:textAppearance="@style/normaltext"
                android:textColor="#000000" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:src="@drawable/intro2" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>